--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "prebuildify:win": "for /f \"usebackq tokens=*\" %v in (`node -v`) do pnpm exec prebuildify -t %v --napi --strip",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
+    "test:coverage": "vitest run --config vitest.config.monocart.ts --coverage",
+    "test:coverage-v8": "vitest run --coverage",
     "type-check": "tsc --noEmit",
     "clean": "rm -rf lib",
     "lint": "biome lint",
@@ -34,9 +35,12 @@
     "node-gyp-build": "^4.8.4"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.2.2",
-    "@types/node": "^24.3.0",
+    "@biomejs/biome": "^2.2.3",
+    "@oorabona/vitest-monocart-coverage": "^2.0.1",
+    "@types/node": "^24.3.1",
+    "@vitest/coverage-istanbul": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "3.2.4",
     "nano-staged": "^0.8.0",
     "simple-git-hooks": "^2.13.1",
     "tsd": "^0.33.0",
