feat: implement LZMA pool for concurrency control and metrics tracking
- Add LZMAPool class to manage concurrent compression and decompression operations with event monitoring.
- Implement queue management, metrics tracking, and error handling in the pool.
- Create tests for concurrency, error handling, and metrics to ensure reliability and performance.
- Introduce file-based compression and decompression helpers with corresponding tests.
- Add comprehensive tests for LZMA error classes to achieve 100% coverage.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "format": "biome format",
     "format:write": "biome format --write",
     "check": "biome check",
-    "check:write": "biome check --write"
+    "check:write": "biome check --write",
+    "release": "release-it-preset default",
+    "release:manual": "release-it-preset manual-changelog",
+    "release:hotfix": "release-it-preset hotfix",
+    "changelog:update": "release-it-preset changelog-only"
   },
   "dependencies": {
     "node-addon-api": "^8.5.0",
@@ -36,12 +40,14 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.3",
+    "@oorabona/release-it-preset": "^0.6.0",
     "@oorabona/vitest-monocart-coverage": "^2.0.1",
     "@types/node": "^24.3.1",
     "@vitest/coverage-istanbul": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "3.2.4",
     "nano-staged": "^0.8.0",
+    "release-it": "^19.0.5",
     "simple-git-hooks": "^2.13.1",
     "tsd": "^0.33.0",
     "typescript": "^5.9.2",
@@ -75,6 +81,10 @@
     "url": "https://github.com/oorabona/node-liblzma/issues"
   },
   "homepage": "https://github.com/oorabona/node-liblzma",
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/oorabona"
+  },
   "binary": {
     "module_name": "liblzma"
   },
