--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -32,9 +32,13 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Install pnpm (JavaScript)
+        if: matrix.language == 'javascript'
+        uses: pnpm/action-setup@v4
+
       - name: Setup Node.js
         if: matrix.language == 'javascript'
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v5
         with:
           node-version: '20'
 
@@ -43,10 +47,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-
-      - name: Install pnpm
-        if: matrix.language == 'javascript'
-        uses: pnpm/action-setup@v4
 
       - name: Install system dependencies
         run: |
