chore: prepare for v2.0.0 release :rocket:

--- a/.release-it.json
+++ b/.release-it.json
@@ -1,3 +1,7 @@
 {
-  "extends": "@oorabona/release-it-preset/config/default"
+  "extends": "@oorabona/release-it-preset/config/default",
+  "git": {
+    "requireBranch": "master",
+    "requireCleanWorkingDir": true
+  }
 }
